# camer

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: Publish-NPM.yml  Publish.yml  rust.yml
lib/: index.js
npm/camer/: .npmignore  README.md  package.json  pnpm-lock.yaml
npm/camer/scripts/: generate-packages.mjs  postinstall.js
scripts/: publish.sh
src/: command.rs  conf.rs  default  handler.rs  main.rs  utils.rs
