[package]
name = "camer"
version = "1.0.6"
edition = "2021"
description = "A nifty command alias manager"
repository = "https://github.com/hubvue/cam"
keywords = [
	"alias",
  "command",
  "cli",
  "manager"
]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0"
regex = "1.5.5"
