[package]
name = "camer"
version = "1.0.9"
edition = "2021"
description = "A nifty command alias manager"
repository = "https://github.com/hubvue/cam"
keywords = [
	"alias",
  "command",
  "cli",
  "manager"
]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
dirs = "5.0"
regex = "1.7.1"
prettytable-rs = "0.10.0"
